deploy/kubernetes/php-apache.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-demo
  namespace: default
spec:
  rules:
    - host: www.example-lab.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-demo
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: php-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-demo
spec:
  selector:
    matchLabels:
      name: php-demo
  replicas: 1
  template:
    metadata:
      labels:
        name: php-demo
    spec:
      containers:
      - name: php
        image: r19750927/php:demo
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
